--- a/about.html
+++ b/about.html
@@ -74,11 +74,11 @@
         <img src="/assets/logo.png" class="logo" alt="">
         <nav class="navbar">
             <ul class="navbar-lists">
-                <li><a href="/index.html">HOME</a></li>
-                <li><a href="/about.html">ABOUT US</a></li>
-                <li><a href="/studyingermany.html">STUDY IN GERMANY</a></li>
-                <li><a href="/registration.html">REGISTRATION</a></li>
-                <li><a href="/contact.html">CONTACT US</a></li>
+                <li><a href="./index.html">HOME</a></li>
+                <li><a href="./about.html">ABOUT US</a></li>
+                <li><a href="./studyingermany.html">STUDY IN GERMANY</a></li>
+                <li><a href="./registration.html">REGISTRATION</a></li>
+                <li><a href="./contact.html">CONTACT US</a></li>
             </ul>
         </nav>
 
