--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
         <nav class="heading  ">
             <img src="assets/logo.png" class="logo" alt="">
             <ul class="index-res">
-                <li><a href="/index.html">HOME</a></li>
-                <li><a href="/about.html">ABOUT US</a></li>
-                <li><a href="/studyingermany.html">STUDY IN GERMANY</a></li>
-                <li><a href="/registration.html">REGISTRATION</a></li>
-                <li><a href="/contact.html">CONTACT US</a></li>
+                <li><a href="./index.html">HOME</a></li>
+                <li><a href="./about.html">ABOUT US</a></li>
+                <li><a href="./studyingermany.html">STUDY IN GERMANY</a></li>
+                <li><a href="./registration.html">REGISTRATION</a></li>
+                <li><a href="./contact.html">CONTACT US</a></li>
             </ul>
 
             <div class="mobile-home-navbar-btn">
