--- a/Roadmap/studyinnepal.html
+++ b/Roadmap/studyinnepal.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global Excel</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+    <link rel="stylesheet" href="/style/roadmap.css">
     <link rel="stylesheet" href="./style/about.css">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,500;1,300&display=swap"
         rel="stylesheet">
@@ -15,68 +16,60 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- -----------------My PROJECT--------------------- -->
+
+    <!-- -----------------IONICONS--------------------- -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
-    <link rel="stylesheet" href="/style/responsive.css">
-
-    <link rel="stylesheet" href="/style/validation.css">
-
-    <link rel="stylesheet" href="/style/contact.css">
-
-    <script defer src="./js/navbar.js"></script>
-
-    <script src="./js/validate.js"></script>
-
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="../style/about.css">
+    <link rel="stylesheet" href="../style/responsive.css">
+    <link rel="stylesheet" href="../style/main.css">
+    <script defer src="../js/navbar.js"></script>
 
 
     <!-- REVOLUTION LAYERS STYLES -->
-    <link rel="stylesheet" type="text/css" href="project/css/layers.css">
 
-    <link rel="stylesheet" type="text/css" href="project/css/settings.css">
+    <link rel="stylesheet" type="text/css" href="../project/css/layers.css">
+
+    <link rel="stylesheet" type="text/css" href="../project/css/settings.css">
 
 
     <!-- bootstrap -->
-    <link rel="stylesheet" type="text/css" href="/project/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="../project/css/bootstrap.min.css" />
 
     <!-- animate -->
-    <link rel="stylesheet" type="text/css" href="/project/css/animate.css" />
+    <link rel="stylesheet" type="text/css" href="../project/css/animate.css" />
 
     <!-- owl-carousel -->
-    <link rel="stylesheet" type="text/css" href="/project/css/owl.carousel.css">
+    <link rel="stylesheet" type="text/css" href="../project/css/owl.carousel.css">
 
     <!-- fontawesome -->
-    <link rel="stylesheet" type="text/css" href="/project/css/font-awesome.css" />
+    <link rel="stylesheet" type="text/css" href="../project/css/font-awesome.css" />
 
     <!-- themify -->
-    <link rel="stylesheet" type="text/css" href="/project/css/themify-icons.css" />
+    <link rel="stylesheet" type="text/css" href="../project/css/themify-icons.css" />
 
     <!-- flaticon -->
-    <link rel="stylesheet" type="text/css" href="/project/css/flaticon.css" />
+    <link rel="stylesheet" type="text/css" href="../project/css/flaticon.css" />
 
 
     <!-- REVOLUTION LAYERS STYLES -->
 
-    <link rel="stylesheet" type="text/css" href="revolution/css/layers.css">
+    <link rel="stylesheet" type="text/css" href="../revolution/css/layers.css">
 
-    <link rel="stylesheet" type="text/css" href="revolution/css/settings.css">
+    <link rel="stylesheet" type="text/css" href="../revolution/css/settings.css">
 
     <!-- prettyphoto -->
-    <link rel="stylesheet" type="text/css" href="/project/css/prettyPhoto.css">
+    <link rel="stylesheet" type="text/css" href="../project/css/prettyPhoto.css">
 
     <!-- shortcodes -->
-    <link rel="stylesheet" type="text/css" href="/project/css/shortcodes.css" />
+    <link rel="stylesheet" type="text/css" href="../project/css/shortcodes.css" />
+
 
     <!-- main -->
-    <link rel="stylesheet" type="text/css" href="/project/css/main.css" />
-
-
+    <link rel="stylesheet" type="text/css" href="../project/css/main.css" />
 
     <!-- responsive -->
-    <link rel="stylesheet" type="text/css" href="/project/css/responsive.css" />
+    <link rel="stylesheet" type="text/css" href="../project/css/responsive.css" />
 </head>
 
 <body class="body">
@@ -85,27 +78,27 @@
         <img src="/assets/logo.png" class="logo" alt="">
         <nav class="navbar">
             <ul class="navbar-lists">
-                <li><a href="./index.html">HOME</a></li>
-                <li><a>ABOUT US</a>
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="../about.html">ABOUT US</a>
                     <ul class="about-dropdown">
-                        <li><a class="hover-underline-animation" href="./about.html">Global Excel</a></li>
+                        <li><a class="hover-underline-animation" href="#">Global Excel</a></li>
                         <li><a class="hover-underline-animation" href="#">Teams</a></li>
                         <li><a class="hover-underline-animation" href="#">Gallery</a></li>
+                    </ul>
+                </li>
+                <li><a>ABROAD STUDY </a>
 
-                    </ul>
-                </li>
-                <li><a>ABROAD STUDY</a>
                     <ul class="roadmap-dropdown">
-                        <li><a class="hover-underline-animation" href="./Roadmap/studyingermany.html">Study In
+                        <li><a class="hover-underline-animation" href="../Roadmap/studyingermany.html">Study In
                                 Germany</a></li>
-                        <li><a class="hover-underline-animation" href="./Roadmap/studyinindia.html">Study in India</a>
+                        <li><a class="hover-underline-animation" href="../Roadmap/studyinindia.html">Study in India</a>
                         </li>
-                        <li><a class="hover-underline-animation" href="./Roadmap/studyinnepal.html">Study In Nepal</a>
+                        <li><a class="hover-underline-animation" href="../Roadmap/studyinnepal.html">Study In Nepal</a>
                         </li>
                     </ul>
                 </li>
-                <li><a href="./registration.html">REGISTRATION</a></li>
-                <li><a href="./contact.html">CONTACT US</a></li>
+                <li><a href="../registration.html">REGISTRATION</a></li>
+                <li><a href="../contact.html">CONTACT US</a></li>
             </ul>
         </nav>
 
@@ -116,22 +109,28 @@
     </header>
     <!-- ----------Header Section End------- -->
 
+
+
     <div class="page">
         <!-- page-title -->
-        <div class="ttm-page-title-row">
+        <div class="ttm-page-title-row"
+            style="display: flex; justify-content: center; align-items: center; height: 400px;">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="title-box ttm-textcolor-white">
-                            <div class="page-title-heading">
-                                <h1 class="title">Registration</h1>
+                            <div class="page-title-heading" style="  text-align: center !important
+                        ;">
+                                <h1>RoadMap To Nepal</h1>
                             </div><!-- /.page-title-captions -->
-                            <div class="breadcrumb-wrapper">
+                            <div class="breadcrumb-wrapper" style=" text-align: center !important
+                        ;">
                                 <span>
-                                    <a title="Homepage" href="index.html"><i class="ti ti-home"></i>&nbsp;&nbsp;Home</a>
+                                    <a title="Homepage" href="../index.html"><i
+                                            class="ti ti-home"></i>&nbsp;&nbsp;Home</a>
                                 </span>
                                 <span class="ttm-bread-sep">&nbsp; | &nbsp;</span>
-                                <span>Registration</span>
+                                <span>Roadmap to Nepal</span>
                             </div>
                         </div>
                     </div><!-- /.col-md-12 -->
@@ -140,92 +139,115 @@
         </div><!-- page-title end-->
 
 
-        <div class="col-lg-12">
-            <div class="box">
-                <!-- section title -->
-                <div class="section-title  with-desc clearfix">
-                    <div class="title-header">
-                        <p>Get your german proficiency certified</p>
-                        <h2 class="title">Register for Exam</h2>
-                    </div>
-                </div>
-                <!-- section title end -->
 
-                <!-- -----from Start------- -->
-                <form id="ttm-contactform " onsubmit="return validateForm()" class="ttm-contactform wrap-form clearfix"
-                    method="post" action="#">
-                    <div class="row">
-
-                        <div class="col-md-12 ">
-                            <label>
-                                <span class="text-input">
-                                    <input class="padding" name="name" id="name" type="text" value=""
-                                        placeholder="Your Name">
-                                    <div class="error" id="nameErr"></div>
-                                </span>
-                            </label>
-                        </div>
-
-                        <div class="col-md-12">
-                            <label>
-                                <span class="text-input">
-                                    <input class="padding" id="email" name="email" type="email" value=""
-                                        placeholder="Your Email">
-                                    <div class="error" id="emailErr"></div>
-                                </span>
-                            </label>
-                        </div>
-
-                        <div class="col-md-12">
-                            <label>
-                                <span class="text-input">
-                                    <input class="padding" name="phone" type="text" value="" placeholder="Your Phone"
-                                        maxlength="10">
-                                    <div class="error" id="mobileErr"></div>
-                                </span>
-                            </label>
-                        </div>
-
-                        <div class="col-md-12">
-                            <label>
-                                <span class="text-input">
-                                    <input class="padding" id="address" name="address" type="text" value=""
-                                        placeholder="Address as Per Passport">
-                                    <div class="error" id="addressErr"></div>
-                                </span>
-                            </label>
-                        </div>
-
-                        <div class="col-md-12">
-                            <label>
-                                <span class="text-input">
-                                    <input class="padding" id="adharnum" name="aadharnum" type="number" value=""
-                                        placeholder="Aadhar Number">
-                                    <div class="error" id="adharErr"></div>
-                                </span>
-                            </label>
-                        </div>
-
-                        <div class="col-md-12">
-                            <label>
-                                <span class="text-input">
-                                    <inpu class="padding" id="pannum" name="pannum" type="text" value=""
-                                        placeholder="Permanent Account Number(PAN)">
-                                        <div class="error" id="panErr"></div>
-                                </span>
-                            </label>
-                        </div>
-
-                    </div>
-
-                    <input name="submit" type="submit" id="submit"
-                        class="submit ttm-btn ttm-btn-size-md ttm-btn-shape-square ttm-btn-bgcolor-darkgrey"
-                        value="Register">
-                </form>
-
-                <!-- -----from Start------- -->
+        <!-- -------ROADMAP SECTION------- -->
+        <section class="roadmap">
+            <div class="heading">
+                <p>Step-by-step process</p>
+                <h2>From Nepal</h2>
             </div>
-        </div>
+            <div class="phase grid grid-column-2">
+                <div class="box1 midline">
+                    <h2>1.Contact Global Excel</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, dolorem! Blanditiis,
+                        velit?Lorem
+                        ipsum dolor sit amet consectetur adipisicing elit. Eum totam ab tempora tempore libero aperiam
+                        porro
+                        recusandae quos doloremque omnis.</p>
+                </div>
+                <div class="box2">
+
+                </div>
+            </div>
+            <div class="phase grid grid-column-2">
+                <div class="box2 midline">
+
+                </div>
+                <div class="box1 ">
+                    <h2>2. Select the skill development program.</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, dolorem! Blanditiis,
+                        velit?Lorem
+                        ipsum dolor sit amet consectetur adipisicing elit. Eum totam ab tempora tempore libero aperiam
+                        porro
+                        recusandae quos doloremque omnis.</p>
+                </div>
+            </div>
+            <div class="phase grid grid-column-2">
+                <div class="box1 midline">
+                    <h2>3. Skill Development for Employment (1-8 Months)</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, dolorem! Blanditiis,
+                        velit?Lorem
+                        ipsum dolor sit amet consectetur adipisicing elit. Eum totam ab tempora tempore libero aperiam
+                        porro
+                        recusandae quos doloremque omnis.</p>
+                </div>
+                <div class="box2">
+
+                </div>
+            </div>
+            <div class="phase grid grid-column-2">
+
+                <div class="box2 midline">
+
+                </div>
+                <div class="box1 ">
+                    <h2>4. Take B1 German Language Test (8th Month)</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, dolorem! Blanditiis,
+                        velit?Lorem
+                        ipsum dolor sit amet consectetur adipisicing elit. Eum totam ab tempora tempore libero aperiam
+                        porro
+                        recusandae quos doloremque omnis.</p>
+                </div>
+            </div>
+            <div class="phase grid grid-column-2">
+                <div class="box1 midline">
+                    <h2>5. Assistance for VISA</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, dolorem! Blanditiis,
+                        velit?Lorem
+                        ipsum dolor sit amet consectetur adipisicing elit. Eum totam ab tempora tempore libero aperiam
+                        porro
+                        recusandae quos doloremque omnis.</p>
+                </div>
+                <div class="box2 ">
+
+                </div>
+
+            </div>
+
+            <div class="phase grid grid-column-2">
+                <div class="box2 midline">
+
+                </div>
+                <div class="box1">
+                    <h2>6. Get VISA and ﬂy to Germany</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, dolorem! Blanditiis,
+                        velit?Lorem
+                        ipsum dolor sit amet consectetur adipisicing elit. Eum totam ab tempora tempore libero aperiam
+                        porro
+                        recusandae quos doloremque omnis.</p>
+                </div>
+            </div>
+            <div class="phase grid grid-column-2">
+                <div class="box1 midline">
+                    <h2>7. Further Training for B2 Level German and subsequent to which the candidates will begin their
+                        Vocational Training (Apprenticeship)</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, dolorem! Blanditiis,
+                        velit?Lorem
+                        ipsum dolor sit amet consectetur adipisicing elit. Eum totam ab tempora tempore libero aperiam
+                        porro
+                        recusandae quos doloremque omnis.</p>
+                </div>
+                <div class="box2 ">
+
+                </div>
+
+            </div>
+
+        </section>
+
+
+
+
 
         <!--footer start-->
         <footer class="footer widget-footer clearfix">
@@ -301,7 +323,7 @@
                 </div>
             </div>
         </footer>
-        <!--footer end-->
+        <!--footer end-->.
 
     </div>
 </body>
