--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <link rel="stylesheet" type="text/css" href="/project/css/responsive.css" />
 </head>
 
-<body>
+<body class="body">
     <!-- <--------Header Section--------->
     <header class="header ">
         <div class="overlay"></div>
@@ -75,8 +75,20 @@
             <img src="assets/logo.png" class="logo" alt="">
             <ul class="index-res">
                 <li><a href="./index.html">HOME</a></li>
-                <li><a href="./about.html">ABOUT US</a></li>
-                <li><a href="./studyingermany.html">STUDY IN GERMANY</a></li>
+                <li><a >ABOUT US</a>
+                    <ul class="about-dropdown">
+                        <li><a class="hover-underline-animation" href="./about.html">Global Excel</a></li>
+                        <li><a class="hover-underline-animation" href="#">Teams</a></li>
+                        <li><a class="hover-underline-animation" href="#">Gallery</a></li>
+                    </ul>
+                </li>
+                <li><a >ABROAD STUDY</a>
+                    <ul class="roadmap-dropdown">
+                        <li><a class="hover-underline-animation" href="./Roadmap/studyingermany.html">Study In Germany</a></li>
+                        <li><a class="hover-underline-animation" href="./Roadmap/studyinindia.html">Study in India</a></li>
+                        <li><a class="hover-underline-animation" href="./Roadmap/studyinnepal.html">Study In Nepal</a></li>
+                    </ul>
+                </li>
                 <li><a href="./registration.html">REGISTRATION</a></li>
                 <li><a href="./contact.html">CONTACT US</a></li>
             </ul>
@@ -89,7 +101,7 @@
 
 
 
-        <div class="content">
+        <div class="content page">
             <h1>We Bring your Business to the Path of <span>Success.</span> </h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe magni nam velit veniam fuga minima quaerat
                 voluptates quisquam aliquam qui.</p>
@@ -103,7 +115,7 @@
 
 
     <!-- about-section -->
-    <section class="ttm-row about-section clearfix">
+    <section class="ttm-row about-section clearfix page">
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 col-sm-12">
