--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global Excel</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-    <link rel="stylesheet" href="./style/about.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,500;1,300&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
@@ -19,8 +19,10 @@
     <!-- -----------------IONICONS--------------------- -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <link rel="stylesheet" href="/style/responsive.css">
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="./style/about.css">
+    <link rel="stylesheet" href="./style/responsive.css">
+    <link rel="stylesheet" href="./style/main.css">
+
     <script defer src="./js/navbar.js"></script>
 
     <!-- REVOLUTION LAYERS STYLES -->
@@ -68,15 +70,31 @@
     <link rel="stylesheet" type="text/css" href="/project/css/responsive.css" />
 </head>
 
-<body>
+<body class="body" >
     <!-- <--------Header Section--------->
     <header class="head  ">
         <img src="/assets/logo.png" class="logo" alt="">
         <nav class="navbar">
             <ul class="navbar-lists">
                 <li><a href="./index.html">HOME</a></li>
-                <li><a href="./about.html">ABOUT US</a></li>
-                <li><a href="./studyingermany.html">STUDY IN GERMANY</a></li>
+                <li><a>ABOUT US</a>
+                    <ul class="about-dropdown">
+                        <li><a class="hover-underline-animation" href="./about.html">Global Excel</a></li>
+                        <li><a class="hover-underline-animation" href="#">Teams</a></li>
+                        <li><a class="hover-underline-animation" href="#">Gallery</a></li>
+                    </ul>
+                </li>
+                <li><a>ABROAD STUDY </a>
+                   
+                    <ul class="roadmap-dropdown">
+                        <li><a class="hover-underline-animation" href="./Roadmap/studyingermany.html">Study In
+                                Germany</a></li>
+                        <li><a class="hover-underline-animation" href="./Roadmap/studyinindia.html">Study in India</a>
+                        </li>
+                        <li><a class="hover-underline-animation" href="./Roadmap/studyinnepal.html">Study In Nepal</a>
+                        </li>
+                    </ul>
+                </li>
                 <li><a href="./registration.html">REGISTRATION</a></li>
                 <li><a href="./contact.html">CONTACT US</a></li>
             </ul>
@@ -94,8 +112,6 @@
 
     <!--page start-->
     <div class="page">
-
-
         <!--header start-->
         <header id="masthead" class="header ttm-header-style-classic">
 
