--- a/Roadmap/studyinindia.html
+++ b/Roadmap/studyinindia.html
@@ -79,9 +79,9 @@
             <nav class="navbar">
                 <ul class="navbar-lists">
                     <li><a href="../index.html">HOME</a></li>
-                    <li><a href="../about.html">ABOUT US</a>
+                    <li><a >ABOUT US</a>
                         <ul class="about-dropdown">
-                            <li><a class="hover-underline-animation" href="#">Global Excel</a></li>
+                            <li><a class="hover-underline-animation" href="../about.html">Global Excel</a></li>
                             <li><a class="hover-underline-animation" href="#">Teams</a></li>
                             <li><a class="hover-underline-animation" href="#">Gallery</a></li>
                         </ul>
